fix: scale the image less to make it less blurry

--- a/src/styles.css
+++ b/src/styles.css
@@ -206,7 +206,7 @@ h2 {
 
 .project-banner:focus > picture > img,
 .project-banner:hover > picture > img {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 @media screen and (min-width: 600px) {
@@ -237,6 +237,7 @@ h2 {
   .project-banner {
     flex-shrink: 0;
     width: 50%;
+    max-height: 250px;
     margin-top: 0;
     border-radius: 16px 0 0 16px;
   }
